# SHRINE

./: .fix_small.py  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rename-sed.sh  .rename_do.py  .rename_pass2.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  WGEN PAR Input Time Series.xlsx  _tmp_fix2.py  _tmp_fix_readme.py  codecov.yml  commit-msg-hygiene.txt  data.txt  data.xlsx  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.cursor/: permissions.json
.cursor/rules/: git-and-pr.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  package.yml  publish-testpypi.yml  publish.yml  secrets.yml  test.yml  typecheck.yml
aegis/: __init__.py
aegis/simulation/: __init__.py  balance.py  context.py  elements.py  errors.py  flow.py  inputs.py  metadata.py  model.py  protocols.py  recorder.py  rng.py  run_controller.py  scenario.py  scheduler.py  step.py
data/: __init__.py  aegis_units.json  fileman.py  test_fileManager.py
data_external/: apikey.txt.example
docs/: api-stability.md  architecture.md  comparison.md  concepts.md  cookiecutter-element.md  extending-elements.md  hydrology-contracts.md  import-csv-timeseries.md  index.md  install.md  modernization-roadmap.md  project-name.md  pypi.md  quickstart.md  reference-models.md  releases.md  results-recording.md  scenarios.md  secrets-and-repo-hygiene.md  simulation-framework-requirements.md  step-debugging.md  testing.md
docs/adr/: 0001-units-with-pint-at-boundaries.md  0002-networkx-flow-solver.md  0003-protocol-based-domain-contracts.md  0004-mit-license.md  README.md  template.md
docs/api/: index.md  simulation.md
docs/tutorial/: first-watershed-model.md  index.md
examples/: __init__.py  catchment_run.py  climate_loop.py  custom_element.py  export_run_results.py  nwis_streamflow.py  run_from_csv_scenario.py  run_from_scenario.py  run_reference_scenario.py  step_debug.py  tutorial_watershed.py  watershed_run.py
geometry/: shape.py  test_cylinder.py  test_shape.py
global_attributes/: clock.py  constants.py  model.py  shrine_object.py  test_legacy_simulator.py  test_model.py  test_suite.py
hydrology/: catchment.py  test_watershed.py  watershed.py
inputs/: table.py  test_table.py
mapping/: map_toy.py
results/: chart.py  time_history.py  ts_chart.py
scenarios/: baseline_watershed.json  csv_watershed.yaml  tutorial_watershed.yaml  wet_year.yaml
scenarios/benchmark/: benchmark_watershed.yaml
scenarios/data/: jan2019_climate.csv
scenarios/reference/: README.md  published_dendritic_routing.yaml  synthetic_nested_junction.yaml  synthetic_single_catchment.yaml  synthetic_twin_catchment.yaml
scripts/: add_future_annotations.py  bootstrap_venv.sh  build_docs.sh  build_package.sh  check_release_version.py  gen_api_reference.py  remove_legacy_aegis_package.sh  rename_to_shrine.sh  run_tests.sh  scaffold_shrine_element_cookiecutter.sh  scan_secrets.sh  update_benchmark_baseline.py  update_golden_outputs.py  update_reference_golden.py
shrine/: __init__.py
shrine-element-cookiecutter/: README.md  cookiecutter.json
shrine-element-cookiecutter/hooks/: pre_gen_project.py
shrine-element-cookiecutter/{{cookiecutter.project_slug}}/: LICENSE  README.md  pyproject.toml
shrine-element-cookiecutter/{{cookiecutter.project_slug}}/.github/workflows/: test.yml
shrine-element-cookiecutter/{{cookiecutter.project_slug}}/examples/: run_demo.py
shrine-element-cookiecutter/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: element.py
shrine-element-cookiecutter/{{cookiecutter.project_slug}}/tests/: test_element.py  test_plugin.py
shrine/simulation/: __init__.py  balance.py  clock.py  context.py  elements.py  inputs.py  manifest.py  metadata.py  protocols.py  run_controller.py  scenario.py  scheduler.py  version.py
src/controllers/: __init__.py  onoff.py  test_controller.py
src/data/: __init__.py  file.py  fileman.py  test_file.py  test_fileManager.py
src/geometry/: __init__.py  bowl.py  circle.py  cylinder.py  datum.py  point.py  shape.py  test_bowl.py  test_circle.py  test_cylinder.py  test_shape.py
src/global_attributes/: __init__.py  clock.py  constants.py  manual_tests.py  set_label.py  shrine_object.py  simulator.py  test_clock.py  test_legacy_model.py  test_model.py  test_shrine_object.py  test_suite.py  test_suite_heavy.py
src/hydraulics/: __init__.py  pipe.py  pressure_conduit_funcs.py  test_pipe.py
src/hydrology/: __init__.py  awbm.py  catchment.py  enums.py  graph_nodes.py  junction.py  protocols.py  sacramento.py  watershed.py  wgen.py
src/inputs/: __init__.py  data.py  stochastic.py  table.py  test_data.py  test_table.py  test_timeseries.py  time_series.py
src/numerical/: __init__.py  random_walk.py  root_zero.py
src/results/: __init__.py  bar_chart.py  chart.py  live_plotter.py  sliding_ts_chart.py  time_history.py  ts_chart.py
src/shrine/: __init__.py  source.py  units.py
src/testing/: __init__.py  colocated.py  error.py  error_checks.py
src/utils/: __init__.py  attr_setter.py  unit_utils.py
src/validation/: __init__.py  error.py
src/water_manage/: __init__.py  allocator.py  flow_network.py  protocols.py  request.py  reservoir.py  slurry.py  store.py  store_array.py  test_network.py
tests/: conftest.py  path_fixtures.py  test_check_release_version.py
tests/benchmark/: README.md  __init__.py  benchmark_watershed.timing.json  model.py
tests/cookiecutter/: test_shrine_element_cookiecutter.py
tests/docs/: test_gen_api_reference.py
tests/examples/: test_tutorial_watershed.py
tests/global_attributes/: __init__.py  test_legacy_model.py  test_legacy_simulator.py
tests/golden/: README.md  baseline_watershed.outputs.sha256
tests/hydrology/: __init__.py  test_awbm.py  test_catchment_awbm_verification.py  test_catchment_runoff.py  test_graph_node_type.py  test_graph_nodes.py  test_junction.py  test_sacramento.py  (+5 more)
validation/: error_checks.py
water_manage/: flow_network.py  reservoir.py  test_reservoir.py
(+83 files in other folders)
