[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shrine"
version = "0.1.0"
description = "SHRINE — Simulation of Hydrology, Reservoirs, and Integrated Network Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy",
    "pandas",
    "openpyxl>=3.0",
    "pyyaml>=6.0",
    "pint>=0.23",
    "iapws>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]
# Plotting (flow_network.draw, results charts) — not required for simulation tests
viz = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shrine*", "validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["shrine"]
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
include_namespace_packages = true
