[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shrine"
version = "0.1.0"
description = "SHRINE — Simulation of Hydrology, Reservoirs, and Integrated Network Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy",
    "pandas",
    "openpyxl>=3.0",
    "pyyaml>=6.0",
    "pint>=0.23",
    "iapws>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]
# Plotting (flow_network.draw, results charts, legacy inputs.table) — not required for framework tests
viz = [
    "matplotlib>=3.7",
]
# USGS NWIS / hydrofunctions (examples/nwis_streamflow.py); not required for shrine.simulation tests
hydrology = [
    "hydrofunctions>=0.2.4",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
    "shrine*",
    "examples*",
    "validation*",
    # Legacy domain (see docs/modernization-roadmap.md §0.10–0.12)
    "hydrology*",
    "water_manage*",
    "geometry*",
    "inputs*",
    "data*",
    "results*",
    "hydraulics*",
    "numerical*",
    "controllers*",
    "utils*",
    # Shared legacy support (imported by domain packages and validation shims)
    "global_attributes*",
    "testing*",
]

[tool.setuptools.package-data]
data = ["*.json", "*.csv", "*.txt"]
hydrology = ["test_data/*"]
water_manage = ["test_data/*"]
geometry = ["test_data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Imports use the editable install (pip install -e ".[dev]"); do not add repo root to PYTHONPATH.
addopts = "-ra --import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["shrine"]
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
include_namespace_packages = true
