[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shrine"
version = "0.2.0"
description = "SHRINE — Simulation of Hydrology, Reservoirs, and Integrated Network Engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jason Lillywhite" }]
keywords = ["hydrology", "water-resources", "simulation", "reservoir", "watershed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "networkx>=3.0",
    "numpy",
    "pandas",
    "openpyxl>=3.0",
    "pyyaml>=6.0",
    "pint>=0.23",
    "iapws>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "mypy>=1.8",
    "types-PyYAML",
    "pandas-stubs",
    "types-networkx",
    "ruff>=0.8",
]
# Plotting (flow_network.draw, results charts, legacy inputs.table) — not required for framework tests
viz = [
    "matplotlib>=3.7",
]
# USGS NWIS / hydrofunctions (examples/nwis_streamflow.py); not required for shrine.simulation tests
hydrology = [
    "hydrofunctions>=0.2.4",
]
# MkDocs Material site (roadmap 3.1)
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://github.com/jlillywh/SHRINE"
Documentation = "https://jlillywh.github.io/SHRINE/"
Repository = "https://github.com/jlillywh/SHRINE"
Issues = "https://github.com/jlillywh/SHRINE/issues"
Changelog = "https://github.com/jlillywh/SHRINE/blob/master/CHANGELOG.md"
Contributing = "https://github.com/jlillywh/SHRINE/blob/master/CONTRIBUTING.md"
CodeOfConduct = "https://github.com/jlillywh/SHRINE/blob/master/CODE_OF_CONDUCT.md"
Governance = "https://github.com/jlillywh/SHRINE/blob/master/GOVERNANCE.md"
Security = "https://github.com/jlillywh/SHRINE/blob/master/SECURITY.md"

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
    "shrine*",
    "examples*",
    "validation*",
    # Legacy domain (see docs/modernization-roadmap.md §0.10–0.12)
    "hydrology*",
    "water_manage*",
    "geometry*",
    "inputs*",
    "data*",
    "results*",
    "hydraulics*",
    "numerical*",
    "controllers*",
    "utils*",
    # Shared legacy support (imported by domain packages and validation shims)
    "global_attributes*",
    "testing*",
]

[tool.setuptools.package-data]
data = ["*.json", "*.csv", "*.txt"]
hydrology = ["test_data/*"]
water_manage = ["test_data/*"]
geometry = ["test_data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Imports use the editable install (pip install -e ".[dev]"); do not add repo root to PYTHONPATH.
addopts = "-ra --import-mode=importlib"
markers = [
    "benchmark: performance regression tests (roadmap 3.9)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["shrine"]
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
include_namespace_packages = true

# --- mypy (roadmap 2.12): strict ``shrine``; basic domain with documented debt ---
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "shrine.*"
strict = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "shrine.units",
    "shrine.simulation.recorder",
    "shrine.simulation.context",
]
disable_error_code = ["type-arg", "var-annotated"]

[[tool.mypy.overrides]]
module = "shrine.simulation.adapters.*"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = [
    "pint",
    "pint.*",
    "iapws",
    "iapws.*",
    "matplotlib",
    "matplotlib.*",
    "scipy",
    "scipy.*",
    "seaborn",
    "seaborn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "hydrology.*",
    "water_manage.*",
    "geometry.*",
    "inputs.*",
    "data.*",
    "results.*",
    "hydraulics.*",
    "numerical.*",
    "controllers.*",
    "utils.*",
    "global_attributes.*",
    "testing.*",
]
# Basic checks only; full strict typing tracked in 2.13. Baseline ~120 errors (May 2026).
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = true
follow_imports = "silent"
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "type-arg",
    "no-any-return",
    "import-not-found",
    "attr-defined",
    "var-annotated",
    "assignment",
    "union-attr",
    "arg-type",
    "unused-ignore",
]

# --- ruff (roadmap 2.14): lint shrine + tests in CI; format entire src tree ---
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Deprecated colocated unittest modules (roadmap 2.11): shim before imports.
"src/**/test_*.py" = ["E402", "F821", "F841", "E741"]

[tool.ruff.format]
quote-style = "double"
